Shifted alert button to right, fixed li t
Alert button aligned to the right
fixed <li> issue - max width 65em not 65ex

--- a/_assets/css/button.scss
+++ b/_assets/css/button.scss
@@ -51,7 +51,7 @@
   .alert-button {
     position: absolute;
     top: 2em;
-    left: 45%;
+    left: 47%;
   }
 }
 
